Bug 443852 - Cannot scroll timeline horizontally
Summary: Cannot scroll timeline horizontally
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.0.0-beta2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Eoin O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-16 18:35 UTC by Dan Leinir Turthra Jensen
Modified: 2021-10-19 02:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Leinir Turthra Jensen 2021-10-16 18:35:22 UTC
When setting the length of an animation to kind-of-long (in my case 1440 frames, for a minute of animation at the default speed), you end up in a situation where if you zoom out as far as the timeline will go, you cannot get to the frames past 220 on a 4K display (the scrollbars on the timeline seem to just be 1:1, but you /can/ scroll vertically with two-finger scrolling on a touchpad, but horizontal seems to not work). i did try and restart, to see if it was just the UI not updating, and that didn't work.
Comment 1 Emmet O'Neill 2021-10-16 20:30:28 UTC
Thanks for the report Dan. We'll look into it. :)
Comment 2 Eoin O'Neill 2021-10-19 01:50:16 UTC
Hi Dan,

Just to get more details, when you are talking about scrolling, do you mean scrolling with the mouse wheel (or simulated using 2 button scrolling?) or are you unable to move the scroll bar at the bottom of the timeline at all? Because I can confirm that the scroll-wheel does seem to have a regression where the time no longer scrubs as expected which I will work to solve.

Thanks!
Comment 3 Eoin O'Neill 2021-10-19 02:09:40 UTC
Git commit 07d7dc860b51f06889826450093f68d63b788579 by Eoin O'Neill.
Committed on 19/10/2021 at 02:08.
Pushed by eoinoneill into branch 'master'.

Fixed default scrollwheel behavior on timeline to be consistent w/ old versions.

Instead of scrolling up and down, the scroll wheel will continue to scrub like old
versions of Krita. If you want to scroll up and down the list of pinned layers,
you will want to have your mouse over the layers list instead. This should make it
possible to allow both scrolling layers and scrubbing with the mouse wheel where
mouse position represents "intent."

M  +3    -2    plugins/dockers/animation/KisAnimTimelineFramesView.cpp

https://invent.kde.org/graphics/krita/commit/07d7dc860b51f06889826450093f68d63b788579
Comment 4 Eoin O'Neill 2021-10-19 02:16:43 UTC
Hi again Dan,

I just want you to know that I've gone ahead and made the behavior closer to the original scroll behavior in krita 4, where scrubbing should occur when using the mouse wheel. I believe this is the source of your issues in the case of trying to use two-finger scrolling, so I think this issue is resolved now.

However, There's something that is still different than Krita 4 that you should be aware of; In order to fix another bug where it was difficult to scroll up and down the pinned layer list, the scroll wheel can also scroll the view up and down based on the current mouse position. Basically, if your mouse is over any of the pinned layer entries, scrolling the mouse wheel will instead scroll you up and down.

This should be better than the current design, where the shift key had to be pressed down in order to scrub horiztonally since it is more consistent with older versions of Krita. So try the latest nightly in a few days and see if this issue is resolved. If problems persist, feel free to reopen the issue and provide some extra details.

Thanks for taking the time to report a bug!
Eoin.
Comment 5 Eoin O'Neill 2021-10-19 02:20:16 UTC
Git commit 9c28a46332b408ba5907c0da1bd51eacdef42108 by Eoin O'Neill.
Committed on 19/10/2021 at 02:19.
Pushed by eoinoneill into branch 'krita/5.0'.

Fixed default scrollwheel behavior on timeline to be consistent w/ old versions.

Instead of scrolling up and down, the scroll wheel will continue to scrub like old
versions of Krita. If you want to scroll up and down the list of pinned layers,
you will want to have your mouse over the layers list instead. This should make it
possible to allow both scrolling layers and scrubbing with the mouse wheel where
mouse position represents "intent."
(cherry picked from commit 07d7dc860b51f06889826450093f68d63b788579)

M  +3    -2    plugins/dockers/animation/KisAnimTimelineFramesView.cpp

https://invent.kde.org/graphics/krita/commit/9c28a46332b408ba5907c0da1bd51eacdef42108