Fixed default scrollwheel behavior on timeline to be consistent w/ old versions.

Instead of scrolling up and down, the scroll wheel will continue to scrub like old
versions of Krita. If you want to scroll up and down the list of pinned layers,
you will want to have your mouse over the layers list instead. This should make it
possible to allow both scrolling layers and scrubbing with the mouse wheel where
mouse position represents "intent."

BUG:443852
(cherry picked from commit 07d7dc860b51f06889826450093f68d63b788579)